src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__series_details_ui__series_details_ui_tests__tests__snapshot_tests__series_details_ui_AutomaticallySearchSeriesPrompt_0.snap
---
source: src/ui/sonarr_ui/library/series_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Title: Test                                                                                                                                        │        
        │Overview: Blah blah blahIt was filmed in Madison, Wisconsin: a city the crew never really left.The first season took seven years to finish.        │        
        │Network: HBO                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: cool, family, fun                                                                                                                          │        
        │Rating: 84%                                                                                                                                        │        
        │Year: 2022                                                                                                                                         │        
        │Runtime: 63 minutes                                                                                                                                │        
        │Path: /nfs/tv/Test                                                                                                                                 │        
        │Quality Profile: Bluray-1080p                                                                                                                      │        
        │Language Profile: English                                                                                                                          │        
        │Monitored: Yes                                                                                                                                     │        
        │Size on Disk: 59.51 GB                    ╭────────────────  Automatic Series Search  ────────────────╮                                            │        
        │                                          │Do you want to trigger an automatic search of your indexers│                                            │        
        │                                          │     for all monitored episode(s) for the series: Test     │                                            │        
        │                                          │                                                           │                                            │        
        │╭  Series Details  ───────────────────────│                                                           │───────────────────────────────────────────╮│        
        ││ Seasons │ History                       │                                                           │                                           ││        
        ││─────────────────────────────────────────│                                                           │───────────────────────────────────────────││        
        ││   Monitored Season                      │                                                           │Size on Disk                               ││        
        ││=> 🏷         Season title                │                                                           │34.19 GB                                   ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │                                                           │                                           ││        
        ││                                         │╭────────────────────────────╮╭───────────────────────────╮│                                           ││        
        ││                                         ││             Yes            ││            No             ││                                           ││        
        ││                                         │╰────────────────────────────╯╰───────────────────────────╯│                                           ││        
        ││                                         ╰───────────────────────────────────────────────────────────╯                                           ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
